<resources>
    <string name="app_name">Gridly</string>
    <string name="welcome_text">Welcome to GRIDLY</string>
    <string name="logo_name">⚡GRIDLY</string>
    <string name="skip_btn_label">Skip</string>
    <string name="next_btn_label">Next</string>
    <string name="user_name">Sachintha Heshan</string>
    <string name="user_email">sachintha@gmail.com</string>
    <string name="user_first_name">Sachintha</string>
    <string name="user_last_name">Heshan</string>
    <string name="user_contact_number">+94 77 3845 338</string>
    <string name="user_lang">English</string>
    <string name="user_city">Horana</string>
</resources>